# project-iris

./: .flake8  .gitignore  CMakeLists.txt  LICENSE.md  README.md  go.mod  init.sh  main.go  proposal1.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: deploy.py  setup_env.sh
src/config/: config.go  whisper.go
src/core/model/: data_preprocessor.py  train_julia.jl
src/core/nlu/: dialog_manager.py  natural_reasoning.ml
src/engine/daemon/: daemon.cpp
src/integrations/eclipse/: AIExtension.cpp  EclipseIntegration.cpp
src/integrations/intelliJ/: AIAssistantPlugin.java
src/integrations/neovim/: ai_plugin.lua
src/integrations/vscode/: extension.ts  language_server.ts
src/loop/: audio_loop.go  save_to_wav.go
src/memory/: cache_manager.go  redis_client.go  sqlite_handler.go
src/stt/: audio_decoder.rs  core.go  engine.cpp  noise_suppression.rs
src/utils/: error_handler.py  logger.rs
src/visualization/: chart_generator.jl  data_insights.py
tests/: memory_integration_test.go  test_model.py
